fix: set font-number display to inline-block for vertical alignment

--- a/src/index.css
+++ b/src/index.css
@@ -56,6 +56,8 @@ body {
 
 .font-number {
   font-family: var(--font-number);
+  display: inline-block;
+  vertical-align: middle;
 }
 
 /* Base button reset for Neumorphism touches */
